--- a/.github/workflows/build-sql2022.yml
+++ b/.github/workflows/build-sql2022.yml
@@ -1,14 +1,15 @@
 name: Test SQL project with SQL Server 2022
 
-on: workflow_dispatch: 
-push: 
-  branches: ["main"] 
-  paths: 
-    -'Wingtips/**'
-pull_request: 
-  branches: ["main"] 
-  paths: 
-    -'Wingtips/**'
+on: 
+  workflow_dispatch: 
+  push: 
+    branches: ["main"] 
+    paths: 
+      -'Wingtips/**'
+  pull_request: 
+    branches: ["main"] 
+    paths: 
+      -'Wingtips/**'
 
 jobs: 
   build: 
