--- a/.github/workflows/build-sql2022.yml
+++ b/.github/workflows/build-sql2022.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Publish SQL project
       run: |
         sqlpackage /Action:Publish /SourceFile:Wingtips/bin/Debug/Wingtips.dacpac 
-        /TargetConnectionString:"Data Source=localhost,1433;Database=Wingtips;User ID=sa;Password="${{ secrets.CONTAINER_SQL_PASSWORD }}"
+        /TargetConnectionString:"Data Source=localhost,1433;Database=Wingtips;User ID=sa;Password=${{ secrets.CONTAINER_SQL_PASSWORD }}
         ;TrustServerCertificate=True;" 
         /p:AllowIncompatiblePlatform=true    
           
